Change getFirst usage to get(0)